--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-tactile
-title: Kriddel
-url: www.kriddel.de
+title: Schreib Auf!
+url: schreibauf.schreib.name
 #kramdown:
 # parse markdown inside block-level HTML tag
 #  parse_block_html: true
